k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apricode-exchange
  labels:
    name: apricode-exchange
    environment: production
